<resources>
    <string name="app_name">Jaspal\'s Voice</string>
    <string name="clear_screen">Clear screen</string>
    <string name="delete_letter">Delete letter</string>
    <string name="t_9">T9</string>
    <string name="no_suggestion">…</string>
    <string name="share">Share</string>

    <string name="key_sym_1">"1\nSym"</string>
    <string name="key_personal_details">"Personal\ndetails"</string>

    <string name="key_abc_2">"2\nABC"</string>
    <string name="key_medicines">\nMedicines</string>

    <string name="key_def_3">"3\nDEF</string>
    <string name="key_medical_allergies">"Medical\nallergies"</string>

    <string name="key_ghi_4">"4\nGHI"</string>
    <string name="key_food_allergies">"Food\nallergies"</string>

    <string name="key_jkl_5">"5\nJKL"</string>
    <string name="key_gp">G.P /\nMedical Team</string>

    <string name="key_mno_6">"6\nMNO"</string>
    <string name="key_likes_dislikes">"Likes /\nDislikes"</string>

    <string name="key_pqrs_7">"7\nPQRS"</string>
    <string name="key_diagnosis">\nDiagnosis</string>

    <string name="key_tuv_8">"8\nTUV"</string>
    <string name="key_about_me">"\nAbout me"</string>

    <string name="key_wxyz_9">"9\nWXYZ"</string>
    <string name="key_letter_case">"*\nAa/A/a"</string>
    <string name="key_space_0">"0\n_"</string>

    <string name="new_line">"\n_"</string>

    <string name="default_text_when_not_specified">Not specified</string>

    <string name="personal_details">Personal Details</string>
    <string name="personal_details_name">Name</string>
    <string name="personal_details_name_to_be_called">Name I would like to be called</string>
    <string name="personal_details_live_with">Who I live with</string>
    <string name="personal_details_email">Email</string>
    <string name="personal_details_dob">D.O.B</string>
    <string name="personal_details_main_carer">Main Carer</string>
    <string name="personal_details_carer_tel">Carer Tel</string>
    <string name="personal_details_translator_needed">Do You Need a Translator</string>

    <string name="medicines">Medicines</string>
    <string name="medicines_title">How I take my medication</string>
    <string name="medicines_name">Name</string>
    <string name="medicines_dosage">Dosage</string>
    <string name="medicines_reason">Reason</string>
    <string name="medicines_frequency">Frequency</string>
    <string name="medicines_edit">Edit</string>
    <string name="medicines_add">Add medicine</string>

    <string name="medical_allergies">Medical Allergies</string>
    <string name="medical_allergies_title">Medical Allergies</string>

    <string name="food_allergies">Food Allergies</string>
    <string name="food_allergies_title">Food Allergies</string>

    <string name="gp_medical_team">G.P / Medical Team</string>
    <string name="gp_title">GP</string>
    <string name="gp_medical_team_name">Name:</string>
    <string name="gp_medical_team_contact_details">Contact Details:</string>
    <string name="mnd_contact_title">MND Contact</string>
    <string name="physiotherapist_title">Physiotherapist</string>
    <string name="therapist_title">Speech and language therapist</string>
    <string name="carer_title">Carer</string>
    <string name="other_medical_title">Other</string>

    <string name="likes_dislikes">Likes/Dislikes</string>
    <string name="likes_dislikes_daily_routine">My Daily Routine</string>
    <string name="likes_dislikes_hobbies">My Interests / Hobbies</string>
    <string name="likes_dislikes_music">Music / Radio Station I listen to</string>
    <string name="likes_dislikes_tv">Television Shows I Enjoy</string>
    <string name="likes_dislikes_other">Other</string>

    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_title">Diagnosis</string>
    <string name="diagnosis_subtitle">Other Medical Conditions e.g Diabetic, Asthma, Depression</string>

    <string name="about_me">About Me</string>
    <string name="about_me_sitting_position">Sitting (Position/Pattern)</string>
    <string name="about_me_need_to_use">I Need To Use</string>
    <string name="about_me_breathing">Breathing Difficulties</string>
    <string name="about_me_breathing_when">Breathing Difficulties When</string>
    <string name="about_me_sleep_position">Sleep Position</string>
    <string name="about_me_swallowing_difficulties">Eating &amp; Drinking</string>
    <string name="about_me_swallowing_difficulties_subtitle">I Have Swallowing Difficulties</string>
    <string name="about_me_physical_abilities">Physical Abilities</string>
    <string name="about_me_physical_abilities_subtitle">I Can Walk</string>
    <string name="about_me_transfer_to">I Need Help To Transfer To</string>

</resources>
